1432.	[security]		tmark
	Added a new parameter, "max-row-errors", to Memfile lease database
	configuration for kea-dhcp4 and kea-dhcp6.  This parameter can be
	used to limit the number of rows discarded due to error during
	lease file loading after which the server will abandon the effort
	and exit. The default value of 0 disables the limit.
	CVE:2019-6474
	(Gitlab #805,!10-p, git 062e196cbba903cbd6f1ad96cefb671ebdec1cab)

1431.   [security]     tmark
	Prevent the DHCP servers from asserting when malformed
	hostname or FQDN options are received.  Now the servers will
	drop the DHCP packets containing the malformed options.
	CVE:2019-6473
	(Gitlab #730,!8-p git 9e62dc414d672107030b84d2f848cdbbb6218333)

1430.    [security]       tmark
	Added logic to kea-dhcp6 to catch values for client or
	server DUIDs that exceed 128 bytes to inbound packet
	sanity checking.
	CVE:2019-6472
	(Gitlab #722,!4-p	git e3cb31f2bbf982aa01ec1ecc963343223b8baa18)

Kea 1.4.0-P1 released on July 11, 2018

1429.	[bug]		marcin
	Removed memory leak in the DHCPv4 and DHCPv6 servers which
	occurred when hooks libraries where loaded.
	(Trac #5664, git 81e3dfff3e01c327ef7e70919dbb310b2a0a6ac7)

Kea 1.4.0 released on June 15, 2018

1427.	[bug]		marcin
	Resolved multiple problems causing slow synchronization of
	leases in the HA hooks library, including adjusting
	timeouts in control channel and improving performance of
	responses sent by the Command Manager to Control Agent.
	Also, introduced 'sync-timeout' configuration parameter
	into HA hooks library to control lease database
	synchronization timeout.
	(Trac #5649, git cbc29128863916a13364749bf681586aea2aa51e)

1426.	[func]		fdupont
	Added KNOWN and UNKNOWN built-in client classes: after host lookup
	if a matching host entry is found the incoming packet is added to
	the KNOWN class, if none is found to the UNKNOWN class. Then
	expressions depending directly or indirectly on these classes are