@@ -1,3 +1,11 @@
+1433.	[security]		tmark
+	kea-dhcp4 Memfile logic now ensures during reading and writing
+	that leases which are not in the declined state, have either
+	a hardware address, client id, or both. kea-dhcp6 Memfile logic
+	now ensures leases which are not declined have a non-empty DUID.
+	CVE:2019-6474
+	(Gitlab #805,!6-p, git #TBD)
+
 1432.	[security]		tmark
 	Added a new parameter, "max-row-errors", to Memfile lease database
 	configuration for kea-dhcp4 and kea-dhcp6.  This parameter can be
